Fix z-index collisions

--- a/sass/base/_mbs.scss
+++ b/sass/base/_mbs.scss
@@ -124,3 +124,7 @@ input[class^='radio'] {
 .coExistingAddressText p {
   margin-bottom: 5px;
 }
+
+#cart-rightCard .sticky-top {
+  z-index: 0;
+}
